--- a/Ping-Pong/index.html
+++ b/Ping-Pong/index.html
@@ -14,6 +14,13 @@
 
         <div id="ball">.</div>
     </div>
+  </br>
+  <div class="ScoreBoard">
+      <div class="Players" id="1">PLAYER 1</div>
+      <div class="p1Score"> 0 </div>
+      <div class="Players" id="2">PLAYER 2</div>
+      <div class="p2Score"> 0 </div>
+  </div>
 
   </body>
 </html>
