--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-    <button href="/Users/jidekale/Desktop/Projects/Project-1/Ping-Pong/index.html">Ping Pong</button>
-    <button href="/Users/jidekale/Desktop/Projects/Project-1/Simon-Says/index.html">Ping Pong</button>
+    <!-- <a href="#"></a> -->
+    <button href="./Ping-Pong/index.html">Ping Pong</button>
+    <button href="./Simon-Says/index.html">Simon Says</button>
 
   </body>
 </html>
