--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title></title>
   </head>
   <body>
-    <!-- <a href="#"></a> -->
-    <button href="./Ping-Pong/index.html">Ping Pong</button>
-    <button href="./Simon-Says/index.html">Simon Says</button>
-
+    <a href="./Ping-Pong/index.html">Ping Pong</a>
+    <a href="./Simon-Says/index.html">Simon Says</a>
   </body>
 </html>
