--- a/Ping-Pong/index.html
+++ b/Ping-Pong/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ping Pong</title>
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-    <script type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
 
@@ -16,9 +16,9 @@
     </div>
   </br>
   <div class="ScoreBoard">
-      <div class="Players" id="1">PLAYER 1</div>
+      <div class="Players" id="one">PLAYER 1</div>
       <div class="p1Score"> 0 </div>
-      <div class="Players" id="2">PLAYER 2</div>
+      <div class="Players" id="two">PLAYER 2</div>
       <div class="p2Score"> 0 </div>
   </div>
 
