--- a/Simon-Says/index.html
+++ b/Simon-Says/index.html
@@ -14,6 +14,7 @@
       <div class="quarterCircle" id="red"></div>
       <div class="quarterCircle" id="blue"></div>
       <div class="home">
+        <input type="text" id="round" disabled/>
         <button id="startbtn">Start</button>
       </div>
       <div class="quarterCircle" id="green"></div>
